# MyKanBan

./: .dockerignore  .gitignore  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: database.py  main.py  models.py  openrouter.py  security.py
backend/data/: pm.db
backend/static/: index.html
backend/tests/: conftest.py  test_ai_board_scope.py  test_api_boards.py  test_database.py  test_main.py  test_openrouter.py  test_security.py
docs/: BUILDOUT.md  DATABASE.md  PLAN.md  code_review.md
frontend/: AGENTS.md  playwright.config.ts
frontend/scripts/: capture-linkedin-screenshots.mjs
frontend/src/components/: AIChatSidebar.tsx  AppShell.test.tsx  AppShell.tsx  BoardSwitcher.test.tsx  BoardSwitcher.tsx  CardBadges.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanCard.tsx  KanbanCardPreview.tsx  KanbanColumn.tsx  NewCardForm.tsx  icons.tsx
frontend/src/lib/: api.ts  kanban.test.ts  kanban.ts
frontend/tests/: kanban.spec.ts
scripts/: AGENTS.md  run-playwright-server.py  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
