[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the Project Management MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<0.117.0",
  "httpx>=0.28.0,<0.29.0",
  "uvicorn[standard]>=0.35.0,<0.36.0",
]

[dependency-groups]
dev = [
  "pytest>=8.4.0,<8.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
